cmake_minimum_required(VERSION 3.10) 

project(DataStructuresAndAlgorithms)

add_subdirectory(cpu_scheduling)
add_subdirectory(cryptography)
add_subdirectory(data_structures)
add_subdirectory(encoding)
add_subdirectory(graph)
add_subdirectory(hashing)
add_subdirectory(machine_learning)
add_subdirectory(mathematics)
add_subdirectory(matrix)
add_subdirectory(searching)
add_subdirectory(sorting)
add_subdirectory(tests)
add_subdirectory(utils)
